--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
-button{
+/* button{
     color: white;
     background-color: olivedrab;
     width: 100px;
     height: 50px;
+} */
+
+h1{
+    font-family:'Courier New', Courier, monospace;
+    font-size: 80px;
+
 }
+
+
